--- a/build.yaml
+++ b/build.yaml
@@ -19,7 +19,7 @@
 #
 ---
 include:
-  - board: nice_nano
+  - board: nrfmicro_11
     shield: corne_left
-  - board: nice_nano
+  - board: nrfmicro_11
     shield: corne_right
