--- a/config/corne.conf
+++ b/config/corne.conf
@@ -5,5 +5,5 @@ CONFIG_WS2812_STRIP=y
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_STUDIO_LOCKING=n
-CONFIG_ZMK_BACKLIGHT=y
-CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+# CONFIG_ZMK_BACKLIGHT=y
+# CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
