--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,11 +1,12 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-CONFIG_ZMK_RGB_UNDERGLOW=y
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
-CONFIG_WS2812_STRIP=y
+# CONFIG_ZMK_RGB_UNDERGLOW=y
+# CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+# CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_STUDIO_LOCKING=n
+
+# CONFIG_ZMK_STUDIO_LOCKING=n
 # CONFIG_ZMK_BACKLIGHT=y
 # CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y 
-CONFIG_ZMK_SETTINGS_RESET_ON_START=y
+# CONFIG_ZMK_SETTINGS_RESET_ON_START=y
