--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,4 +9,4 @@ CONFIG_ZMK_DISPLAY=y
 # CONFIG_ZMK_STUDIO_LOCKING=n
 # CONFIG_ZMK_BACKLIGHT=y
 # CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y 
-# CONFIG_ZMK_SETTINGS_RESET_ON_START=y
+CONFIG_ZMK_SETTINGS_RESET_ON_START=y
